--- a/exercises/05-Sidebar-With-Menu/index.html
+++ b/exercises/05-Sidebar-With-Menu/index.html
@@ -14,5 +14,35 @@
 
 	<body>
 		<!-- your code here, rememeber to wrap everything into a container-fluid -->
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-2">
+					<ul class="nav flex-column">
+						<li class="nav-item">
+							<a class="nav-link active" href="#">Active</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-10 ">
+					<div class="jumbotron py-2">
+						<h1 class="display-4">Hello, world!</h1>
+						<p class="lead">
+							This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or
+							information.
+						</p>
+						<h4 class="my-4"></h4>
+						<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+						<a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
