--- a/exercises/03-Bootstrap-Grid/index.html
+++ b/exercises/03-Bootstrap-Grid/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			crossorigin="anonymous"
+		/>
+		<title>03 Bootstrap Grid</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-	<title>03 Bootstrap Grid</title>
-</head>
-
-<body>
-	<div class="container">
-		<h1>Let's test the grid baby!</h1>
-		<div class="row">
-			<div class="col-6">First col</div>
-			<div class="col-6">Second col</div>
+	<body>
+		<div class="container-fluid">
+			<h1 class="col-md-8 offset-md-2 text-center">Let's test the grid baby!</h1>
+			<div class="row">
+				<div class="col-6">First col</div>
+				<div class="col-6 ">Second col</div>
+			</div>
+			<div class="row">
+				<div class="col-3">Third col</div>
+				<div class="col-3">Fourth col</div>
+				<div class="col-3">Fourth col</div>
+			</div>
+			<div class="row ">
+				<div class="col-1 justify-content-center bg-danger mx-auto">
+					Thirfsddssl
+				</div>
+			</div>
 		</div>
-		<div class="row">
-			<div>Third col</div>
-			<div>Fourth col</div>
-		</div>
-	</div>
-</body>
-
+	</body>
 </html>
