--- a/exercises/08-Bootstrap-Forms/index.html
+++ b/exercises/08-Bootstrap-Forms/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<title>08 Bootstrap Forms</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-	<title>08 Bootstrap Forms</title>
-</head>
-
-<body>
-
-
-</body>
-
+	<body>
+		<div class="container bg-secondary py-5">
+			<h1>Please login</h1>
+			<form>
+				<div class="form-group">
+					<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email address" />
+				</div>
+				<div class="form-group">
+					<input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password" />
+				</div>
+				<div class="form-check">
+					<input class="form-check-input" type="checkbox" id="gridCheck" />
+					<label class="form-check-label" for="gridCheck">
+						Remember me
+					</label>
+				</div>
+			</form>
+			<button type="button" class="btn btn-info btn-lg btn-block">Login</button>
+		</div>
+	</body>
 </html>
